# excel-processor

./: .gitignore  README.md  __init__.py  cli.py  config.py  debug_flow.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  temp_config.json
config/: streaming-defaults.json
core/: __init__.py  extractor.py  reader.py  structure.py
data/: README.md
data/cache/: .gitkeep
data/checkpoints/: cp_test_data_1743754078_882f2bb0.checkpoint  cp_test_data_1743754251_aeeb851c.checkpoint
data/input/: .gitkeep  complex_headers_test.json
data/output/: .gitkeep  (+1 more)
docs/: excel-processor-error-report.md  excel-processor-summary.md  project-setup.md  pydantic-integration-proposal.md  pydantic-integration-summary.md  streaming_plan.md  structure-excel-processor.md
examples/: pydantic_integration_demo.py
excel_io/: __init__.py  interfaces.py  strategy_factory.py
excel_statistics/: README.md  __init__.py  collector.py  utils.py
models/: README.md  __init__.py  checkpoint_models.py  excel_data.py  excel_structure.py  hierarchical_data.py  metadata.py  pydantic_models.py  statistics_models.py
output/: __init__.py  formatter.py  streaming_writer.py  writer.py
tests/: README.md  run_single_test.py  test_excel_processor.py  test_pydantic_integration.py  verify_excel.py
utils/: __init__.py  caching.py  checkpointing.py  error_handling.py  exceptions.py  logging.py  model_optimization.py  model_serialization.py  performance.py  progress.py  validation_errors.py
workflows/: __init__.py  base_workflow.py  batch.py  multi_sheet.py  single_file.py
(+54 files in other folders)
