[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel_processor"
version = "0.1.0"
description = "A processor for converting Excel files with complex structures to JSON"
readme = "README.md"
authors = [
    {name = "Excel Processor Team", email = "excelprocessor@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openpyxl>=3.0.0",
    "pandas>=1.0.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=2.0.0",
    "mypy>=0.910",
    "black>=22.0.0",
    "isort>=5.0.0",
]

[project.scripts]
excel-processor = "main:main"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88